2006-07-30  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_htype1): Fixed bug in printing of 64-bit prefetchable
	memory windows. Fix by Petr Vandrovec.

	* maint/release.pm: Exclude .git directory from releases.

	* lib/i386-ports.c, lib/i386-io-*: Report failures during port access
	initialization by a->warn() instead of calling printf() or perror()
	directly.

	* lib/i386-ports.c, lib/i386-io-*: Moved the logic which keeps track of
	the port access state to generic code.

	* lib/i386-io-hurd.h: Ask the kernel for I/O port access appropriately.
	Contributed by Thomas Schwinge and Samuel Thibault.

	* lib/i386-ports.c: Define _GNU_SOURCE, it's needed by the Hurd module.

	* lib/header.h: Whitespace cleanups.

	* lib/i386-io-windows.h: Fixed indentation and spelling.

	* README.Windows: Mention that WinIO.dll is needed and where to get it.

2006-06-27  Martin Mares  <mj@ucw.cz>

	* lib/Makefile, Makefile: Added rules for building and cleaning the example.

	* lib/example.c: Show how to use PCI_FILL_CLASS and used another register
	for demonstrating the config space accesses. The example is still very
	incomplete, though.

	* lib/pci.h, lib/generic.c: Added PCI_FILL_CLASS.

	* lib/sysfs.c: Fetch device ID and class from sysfs, because they can
	be modified by kernel fixups.

	* lspci.c: Use PCI_FILL_CLASS. Thanks to Matthew Willcox for the patch.

2006-06-03  Martin Mares  <mj@ucw.cz>

	* lspci.c: Introduced the -nn switch. Thanks to David N. Welton
	for the idea.

	* lib/names.c (pci_lookup_name): Introduced PCI_LOOKUP_MIXED and
	cleaned up the name selection code.

	* lib/names.c (pci_lookup_name): If PCI_LOOKUP_NO_NUMBERS is given,
	pci_access->numeric_ids is ignored.

	* lib/names.c (pci_lookup_name): When class is identified and
	subclass isn't, display class name and subclass number.

2006-05-31  Martin Mares  <mj@ucw.cz>

	* setpci.c (main): Don't crash when an invalid width is specified.

	* lspci.c, setpci.c, common.c: die() now uses the right program