@@ -1,5 +1,8 @@
 2006-07-30  Martin Mares  <mj@ucw.cz>
 
+	* lspci.c, lib/header.h: Added support for the `bridge subsystem ID'
+	capability. Contributed by Petr Vandrovec.
+
 	* lspci.c (show_htype1): Fixed bug in printing of 64-bit prefetchable
 	memory windows. Fix by Petr Vandrovec.
 
